--- a/public/admin.html
+++ b/public/admin.html
@@ -1,50 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Gerencia - Reportes WhatsApp</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gerencia - WhatsApp System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <style>
+        body {
+            background: linear-gradient(to bottom, #f8f9fa, #e9ecef);
+            min-height: 100vh;
+        }
+        .card {
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+            overflow: hidden;
+        }
+        .card-header {
+            background: linear-gradient(to right, #075e54, #128c7e);
+            color: white;
+            font-weight: 600;
+            border-bottom: none;
+        }
+        .btn-primary, .btn-success, .btn-warning, .btn-danger {
+            border-radius: 8px;
+            font-weight: 500;
+        }
+        .btn-outline-primary {
+            border-radius: 8px;
+        }
+        .table thead {
+            background-color: #e9f7ef;
+        }
+        .badge {
+            font-size: 0.85em;
+        }
+        h2, h5 {
+            font-weight: 600;
+        }
+    </style>
 </head>
-<body class="bg-light p-4">
-    <div class="container">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-            <h2>📊 Panel Gerencial</h2>
+<body>
+    <div class="container py-5">
+        <div class="d-flex justify-content-between align-items-center mb-5">
+            <h2 class="mb-0"><i class="bi bi-graph-up me-2"></i>Panel Gerencial</h2>
             <div>
-                <button onclick="window.location.href='/panel.html'" class="btn btn-outline-primary me-2">Ir a Operaciones</button>
-                <button onclick="window.location.href='/login.html'" class="btn btn-danger">Salir</button>
+                <button onclick="window.location.href='/panel.html'" class="btn btn-outline-primary me-2">
+                    <i class="bi bi-whatsapp me-1"></i>Ir a Operaciones
+                </button>
+                <button onclick="window.location.href='/login.html'" class="btn btn-danger">
+                    <i class="bi bi-box-arrow-right me-1"></i>Salir
+                </button>
             </div>
         </div>
 
         <!-- GESTIÓN DE EQUIPO -->
-        <div class="card mb-4 shadow-sm">
-            <div class="card-header bg-primary text-white">👥 Gestión de Equipo</div>
-            <div class="card-body">
-                <!-- Crear Usuario con Rol -->
+        <div class="card mb-4">
+            <div class="card-header">
+                <i class="bi bi-people-fill me-2"></i>Gestión de Equipo
+            </div>
+            <div class="card-body p-4">
                 <div class="row g-3 mb-4">
                     <div class="col-md-4">
-                        <label class="small">Usuario Nuevo</label>
+                        <label class="form-label fw-bold small">Usuario Nuevo</label>
                         <input id="newUser" class="form-control" placeholder="Ej: vendedor1">
                     </div>
                     <div class="col-md-4">
-                        <label class="small">Contraseña</label>
-                        <input id="newPass" type="password" class="form-control" placeholder="Ej: clave123">
+                        <label class="form-label fw-bold small">Contraseña</label>
+                        <input id="newPass" type="password" class="form-control" placeholder="Mínimo 6 caracteres">
                     </div>
                     <div class="col-md-2">
-                        <label class="small">Rol</label>
+                        <label class="form-label fw-bold small">Rol</label>
                         <select id="newRole" class="form-select">
                             <option value="agent">Agente</option>
                             <option value="admin">Admin</option>
                         </select>
                     </div>
                     <div class="col-md-2 d-flex align-items-end">
-                        <button onclick="createUser()" class="btn btn-success w-100">Crear Usuario</button>
+                        <button onclick="createUser()" class="btn btn-success w-100">
+                            <i class="bi bi-person-plus me-1"></i>Crear
+                        </button>
                     </div>
                 </div>
 
-                <!-- Cambiar Contraseña -->
-                <hr>
-                <h5 class="text-primary mb-3">Cambiar Contraseña</h5>
+                <hr class="my-4">
+
+                <h5 class="text-primary mb-3"><i class="bi bi-key me-2"></i>Cambiar Contraseña</h5>
                 <div class="row g-3">
                     <div class="col-md-6">
                         <input id="changeUser" class="form-control" placeholder="Nombre de usuario">
@@ -53,54 +96,64 @@
                         <input id="changePass" type="password" class="form-control" placeholder="Nueva contraseña">
                     </div>
                     <div class="col-md-2 d-flex align-items-end">
-                        <button onclick="changePassword()" class="btn btn-warning w-100">Cambiar</button>
+                        <button onclick="changePassword()" class="btn btn-warning w-100">
+                            <i class="bi bi-shield-lock me-1"></i>Cambiar
+                        </button>
                     </div>
                 </div>
-                <div id="msgChange" class="mt-2"></div>
+                <div id="msgChange" class="mt-3"></div>
             </div>
         </div>
 
-        <!-- LISTA DE USUARIOS CON BOTÓN ELIMINAR -->
-        <div class="card mb-4 shadow-sm">
-            <div class="card-header bg-info text-white">Usuarios Registrados</div>
+        <!-- LISTA DE USUARIOS CON ELIMINAR -->
+        <div class="card mb-4">
+            <div class="card-header">
+                <i class="bi bi-table me-2"></i>Usuarios Registrados
+            </div>
             <div class="card-body">
-                <table class="table table-sm table-hover">
-                    <thead class="table-light">
-                        <tr>
-                            <th>Usuario</th>
-                            <th>Rol</th>
-                            <th>Acción</th>
-                        </tr>
-                    </thead>
-                    <tbody id="userList">
-                        <tr><td colspan="3" class="text-center text-muted">Cargando usuarios...</td></tr>
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table class="table table-hover align-middle">
+                        <thead>
+                            <tr>
+                                <th>Usuario</th>
+                                <th>Rol</th>
+                                <th>Acción</th>
+                            </tr>
+                        </thead>
+                        <tbody id="userList">
+                            <tr><td colspan="3" class="text-center text-muted py-4">Cargando usuarios...</td></tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
 
         <!-- REPORTES -->
-        <div class="card shadow-sm border-success">
-            <div class="card-header bg-success text-white">📥 Generador de Reportes (Excel)</div>
-            <div class="card-body">
-                <div class="row mb-3">
+        <div class="card">
+            <div class="card-header bg-success">
+                <i class="bi bi-file-earmark-spreadsheet me-2"></i>Generador de Reportes (Excel)
+            </div>
+            <div class="card-body p-4">
+                <div class="row mb-4">
                     <div class="col-md-3">
-                        <label class="fw-bold">Fecha Inicio:</label>
+                        <label class="form-label fw-bold">Fecha Inicio</label>
                         <input type="date" id="dateStart" class="form-control">
                     </div>
                     <div class="col-md-3">
-                        <label class="fw-bold">Fecha Fin:</label>
+                        <label class="form-label fw-bold">Fecha Fin</label>
                         <input type="date" id="dateEnd" class="form-control">
                     </div>
                     <div class="col-md-3 d-flex align-items-end">
-                        <button onclick="generarReporte()" class="btn btn-dark w-100">🔍 Buscar y Exportar</button>
+                        <button onclick="generarReporte()" class="btn btn-dark w-100">
+                            <i class="bi bi-search me-1"></i>Buscar y Exportar
+                        </button>
                     </div>
                 </div>
-                <hr>
-                <h6>Vista Previa de Datos:</h6>
-                <div style="height: 400px; overflow: auto; border: 1px solid #ccc;">
-                    <table class="table table-striped table-hover table-sm">
-                        <thead class="table-dark" style="position: sticky; top: 0;">
+
+                <h6 class="fw-bold mb-3">Vista Previa de Datos</h6>
+                <div style="max-height: 500px; overflow: auto; border: 1px solid #dee2e6; border-radius: 8px;">
+                    <table class="table table-striped table-sm mb-0">
+                        <thead class="table-dark sticky-top">
                             <tr>
                                 <th>Fecha</th>
                                 <th>Usuario</th>
@@ -109,7 +162,7 @@
                             </tr>
                         </thead>
                         <tbody id="tbody">
-                            <tr><td colspan="4" class="text-center text-muted py-4">Selecciona fechas para ver datos</td></tr>
+                            <tr><td colspan="4" class="text-center text-muted py-5">Selecciona fechas para ver datos</td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -122,7 +175,6 @@
         document.getElementById('dateStart').value = today;
         document.getElementById('dateEnd').value = today;
 
-        // Cargar usuarios con botón eliminar
         async function loadUsers() {
             try {
                 const res = await fetch('/admin/get-users');
@@ -132,25 +184,24 @@
                 if (d.success && d.users.length > 0) {
                     d.users.forEach(u => {
                         const deleteBtn = u.role === 'agent' 
-                            ? `<button onclick="deleteUser('${u.username}')" class="btn btn-danger btn-sm">Eliminar</button>`
-                            : '<span class="text-muted small">Protegido</span>';
+                            ? `<button onclick="deleteUser('${u.username}')" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i> Eliminar</button>`
+                            : '<span class="text-muted small"><i class="bi bi-shield-lock"></i> Protegido</span>';
                         tbody.innerHTML += `
                             <tr>
-                                <td><b>${u.username}</b></td>
-                                <td>${u.role}</td>
+                                <td><strong>${u.username}</strong></td>
+                                <td><span class="badge bg-${u.role === 'admin' ? 'danger' : 'secondary'}">${u.role}</span></td>
                                 <td>${deleteBtn}</td>
                             </tr>`;
                     });
                 } else {
-                    tbody.innerHTML = '<tr><td colspan="3" class="text-center text-muted">No hay usuarios</td></tr>';
+                    tbody.innerHTML = '<tr><td colspan="3" class="text-center text-muted py-4">No hay usuarios registrados</td></tr>';
                 }
             } catch (err) {
-                tbody.innerHTML = '<tr><td colspan="3" class="text-center text-danger">Error al cargar</td></tr>';
+                tbody.innerHTML = '<tr><td colspan="3" class="text-center text-danger">Error al cargar usuarios</td></tr>';
             }
         }
         loadUsers();
 
-        // Crear usuario
         async function createUser() {
             const u = document.getElementById('newUser').value.trim();
             const p = document.getElementById('newPass').value;
@@ -175,7 +226,6 @@
             }
         }
 
-        // Cambiar contraseña
         async function changePassword() {
             const username = document.getElementById('changeUser').value.trim();
             const newPassword = document.getElementById('changePass').value;
@@ -190,20 +240,19 @@
                 const d = await res.json();
                 const msg = document.getElementById('msgChange');
                 msg.innerHTML = d.success 
-                    ? '<span class="text-success">✅ Contraseña cambiada correctamente</span>'
-                    : '<span class="text-danger">❌ ' + (d.error || "Error") + '</span>';
+                    ? '<div class="alert alert-success">✅ Contraseña cambiada correctamente</div>'
+                    : '<div class="alert alert-danger">❌ ' + (d.error || "Error") + '</div>';
                 if (d.success) {
                     document.getElementById('changeUser').value = '';
                     document.getElementById('changePass').value = '';
                 }
             } catch (err) {
-                document.getElementById('msgChange').innerHTML = '<span class="text-danger">Error de conexión</span>';
+                document.getElementById('msgChange').innerHTML = '<div class="alert alert-danger">Error de conexión</div>';
             }
         }
 
-        // Eliminar usuario (solo agentes)
         async function deleteUser(username) {
-            if (!confirm(`¿Estás seguro de eliminar al usuario "${username}"?\nEsta acción no se puede deshacer.`)) return;
+            if (!confirm(`¿Eliminar al usuario "${username}"? Esta acción es irreversible.`)) return;
 
             try {
                 const res = await fetch('/admin/delete-user', {
@@ -213,15 +262,12 @@
                 });
                 const d = await res.json();
                 alert(d.success ? "✅ " + d.message : "❌ " + (d.error || "Error"));
-                if (d.success) {
-                    loadUsers();
-                }
+                if (d.success) loadUsers();
             } catch (err) {
                 alert("Error de conexión");
             }
         }
 
-        // Reportes
         async function generarReporte() {
             const start = document.getElementById('dateStart').value;
             const end = document.getElementById('dateEnd').value;
@@ -230,12 +276,11 @@
             try {
                 const res = await fetch(`/admin/export-logs?start=${start}&end=${end}`);
                 const logs = await res.json();
-
                 const tbody = document.getElementById('tbody');
                 tbody.innerHTML = '';
 
                 if (!logs || logs.length === 0) {
-                    tbody.innerHTML = '<tr><td colspan="4" class="text-center text-muted py-4">No hay registros en las fechas seleccionadas</td></tr>';
+                    tbody.innerHTML = '<tr><td colspan="4" class="text-center text-muted py-5">No hay registros en las fechas seleccionadas</td></tr>';
                     return;
                 }
 
@@ -244,9 +289,9 @@
                     tbody.innerHTML += `
                         <tr>
                             <td>${fecha}</td>
-                            <td class="fw-bold">${l.username || 'Sistema'}</td>
+                            <td><strong>${l.username || 'Sistema'}</strong></td>
                             <td><span class="badge bg-primary">${l.type || 'general'}</span></td>
-                            <td class="small text-muted">${l.message}</td>
+                            <td class="small">${l.message}</td>
                         </tr>`;
                 });
 
