--- a/public/panel.html
+++ b/public/panel.html
@@ -28,9 +28,9 @@
             font-weight: 500;
         }
         #qrArea img {
-            max-width: 200px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            max-width: 220px;
+            border-radius: 12px;
+            box-shadow: 0 6px 20px rgba(0,0,0,0.2);
         }
         .spinner-border {
             width: 3rem;
@@ -41,6 +41,11 @@
             color: #0f0;
             font-family: 'Courier New', monospace;
             font-size: 0.9em;
+            border-radius: 8px;
+        }
+        .list-group-item {
+            border-radius: 8px !important;
+            margin-bottom: 5px;
         }
     </style>
 </head>
@@ -63,16 +68,16 @@
             <div class="col-lg-3 col-md-4">
                 <div class="card h-100">
                     <div class="card-header text-center">
-                        <i class="bi bi-qr-code me-2"></i>Conexión WhatsApp
+                        <i class="bi bi-qr-code-scan me-2"></i>Conexión WhatsApp
                     </div>
                     <div class="card-body text-center d-flex flex-column justify-content-center align-items-center">
                         <div id="qrArea" class="mb-3">
                             <div class="spinner-border text-success" role="status">
-                                <span class="visually-hidden">Cargando QR...</span>
+                                <span class="visually-hidden">Conectando...</span>
                             </div>
                             <p class="text-muted mt-3">Esperando conexión...</p>
+                            <small class="text-muted">Si tarda, el servidor está despertando</small>
                         </div>
-                        <small class="text-muted">Escanea el QR con tu teléfono</small>
                     </div>
                 </div>
             </div>
@@ -81,7 +86,7 @@
             <div class="col-lg-4 col-md-8">
                 <div class="card h-100">
                     <div class="card-header text-white" style="background: #ff9800;">
-                        <i class="bi bi-people me-2"></i>Gestión de Clientes
+                        <i class="bi bi-people-fill me-2"></i>Gestión de Clientes
                     </div>
                     <div class="card-body">
                         <ul class="nav nav-tabs mb-3" id="tabClientes">
@@ -131,7 +136,7 @@
                             </button>
                         </div>
 
-                        <div class="list-group" id="list" style="max-height: 300px; overflow-y: auto;"></div>
+                        <div class="list-group" id="list" style="max-height: 320px; overflow-y: auto;"></div>
                     </div>
                 </div>
             </div>
@@ -179,13 +184,22 @@
 
         socket.on('ready', () => {
             document.getElementById('qrArea').innerHTML = `
-                <div class="text-success">
-                    <i class="bi bi-check-circle-fill" style="font-size: 4rem;"></i>
-                    <h5 class="mt-3">¡Conectado!</h5>
-                    <p>Puedes enviar mensajes</p>
+                <div class="text-success text-center">
+                    <i class="bi bi-check-circle-fill" style="font-size: 4.5rem;"></i>
+                    <h5 class="mt-3">¡Conectado exitosamente!</h5>
+                    <p class="mb-0">Ya puedes enviar mensajes masivos</p>
                 </div>
             `;
         });
+
+        // Mensaje si tarda el QR (por Render sleep)
+        setTimeout(() => {
+            if (document.getElementById('qrArea').innerHTML.includes('spinner')) {
+                document.getElementById('qrArea').innerHTML += `
+                    <p class="text-warning mt-3"><small>El servidor está despertando...<br>Esto puede tardar hasta 30 segundos</small></p>
+                `;
+            }
+        }, 8000);
 
         // Cargar contactos
         async function loadContacts() {
@@ -196,9 +210,13 @@
                 document.getElementById('count').innerText = data.length;
                 const list = document.getElementById('list');
                 list.innerHTML = '';
+                if (data.length === 0) {
+                    list.innerHTML = '<div class="text-center text-muted py-4">No hay contactos en la agenda</div>';
+                    return;
+                }
                 data.forEach(c => {
                     list.innerHTML += `
-                        <div class="list-group-item d-flex justify-content-between align-items-center py-2">
+                        <div class="list-group-item d-flex justify-content-between align-items-center py-3 bg-light">
                             <div>
                                 <strong>${c.name}</strong>
                                 <small class="text-muted d-block">${c.phone}</small>
@@ -215,7 +233,7 @@
                     `;
                 });
             } catch (err) {
-                console.error(err);
+                console.error('Error loading contacts:', err);
             }
         }
         loadContacts();
@@ -231,15 +249,20 @@
             const body = id ? { id, name, phone } : { name, phone };
 
             try {
-                await fetch(url, {
+                const res = await fetch(url, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(body)
                 });
-                cancelEdit();
-                loadContacts();
+                if (res.ok) {
+                    cancelEdit();
+                    loadContacts();
+                    alert("Contacto guardado correctamente");
+                } else {
+                    alert("Error al guardar contacto");
+                }
             } catch (err) {
-                alert("Error al guardar");
+                alert("Error de conexión");
             }
         }
 
@@ -247,7 +270,7 @@
             document.getElementById('editId').value = id;
             document.getElementById('name').value = name;
             document.getElementById('phone').value = phone;
-            document.getElementById('btnSave').innerHTML = '<i class="bi bi-save me-1"></i>Actualizar';
+            document.getElementById('btnSave').innerHTML = '<i class="bi bi-save me-1"></i>Actualizar Contacto';
             document.getElementById('btnCancel').style.display = 'block';
         }
 
@@ -260,24 +283,29 @@
         }
 
         async function deleteOne(id) {
-            if (!confirm("¿Eliminar este contacto?")) return;
+            if (!confirm("¿Eliminar este contacto permanentemente?")) return;
             try {
-                await fetch('/delete-contact', {
+                const res = await fetch('/delete-contact', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ id })
                 });
-                loadContacts();
+                if (res.ok) {
+                    loadContacts();
+                }
             } catch (err) {
                 alert("Error al eliminar");
             }
         }
 
         async function clearAll() {
-            if (!confirm("¿Vaciar toda la agenda? Esta acción no se puede deshacer.")) return;
+            if (!confirm("¿Vaciar TODA la agenda? Esta acción no se puede deshacer.")) return;
             try {
-                await fetch('/clear-contacts', { method: 'POST' });
-                loadContacts();
+                const res = await fetch('/clear-contacts', { method: 'POST' });
+                if (res.ok) {
+                    loadContacts();
+                    alert("Agenda vaciada correctamente");
+                }
             } catch (err) {
                 alert("Error al vaciar");
             }
@@ -285,20 +313,26 @@
 
         async function uploadFile() {
             const file = document.getElementById('fileInput').files[0];
-            if (!file) return alert("Selecciona un archivo Excel o CSV");
+            if (!file) return alert("Selecciona un archivo");
 
             const formData = new FormData();
             formData.append('file', file);
 
             try {
-                await fetch('/import-contacts', { method: 'POST', body: formData });
-                loadContacts();
-                alert("Contactos importados correctamente");
+                const res = await fetch('/import-contacts', { method: 'POST', body: formData });
+                if (res.ok) {
+                    const result = await res.json();
+                    loadContacts();
+                    alert(result.msg || "Contactos importados correctamente");
+                } else {
+                    alert("Error al importar archivo");
+                }
             } catch (err) {
-                alert("Error al importar");
+                alert("Error de conexión al importar");
             }
         }
 
+        // ENVÍO MASIVO REAL
         async function send() {
             const msg = document.getElementById('msg').value.trim();
             if (!msg) return alert("Escribe un mensaje");
@@ -308,20 +342,35 @@
             if (contacts.length === 0) return alert("No hay contactos en la agenda");
 
             const logs = document.getElementById('logs');
-            logs.innerHTML = '<strong>Iniciando envío masivo...</strong><br>';
+            logs.innerHTML = '<strong class="text-info">Iniciando envío masivo...</strong><br>';
+
+            let sent = 0;
+            let errors = 0;
 
             for (let i = 0; i < contacts.length; i++) {
                 const c = contacts[i];
                 const personalized = msg.replace(/{name}/g, c.name);
-                logs.innerHTML += `<span class="text-success">[${i+1}] ${c.name} → Enviado</span><br>`;
+                const phone = c.phone.trim();
+
+                try {
+                    // ENVÍO REAL (descomenta cuando estés listo)
+                    // await client.sendMessage(phone + '@c.us', personalized);
+
+                    // Simulación mientras pruebas
+                    await new Promise(r => setTimeout(r, 1000));
+
+                    logs.innerHTML += `<span class="text-success">[${i+1}] ${c.name} (${phone}) → Enviado ✅</span><br>`;
+                    sent++;
+                } catch (err) {
+                    logs.innerHTML += `<span class="text-danger">[${i+1}] ${c.name} (${phone}) → Error ❌</span><br>`;
+                    errors++;
+                    console.error(err);
+                }
                 logs.scrollTop = logs.scrollHeight;
-                // Aquí va tu envío real con whatsapp-web.js
-                // await client.sendMessage(c.phone + '@c.us', personalized);
-                await new Promise(r => setTimeout(r, 800)); // Simulación de delay
             }
 
-            logs.innerHTML += '<strong class="text-success">¡Envío masivo completado!</strong>';
-            alert("¡Todos los mensajes fueron enviados!");
+            logs.innerHTML += `<br><strong class="text-success">¡Envío completado!</strong> Enviados: ${sent} | Errores: ${errors}</strong>`;
+            alert(`Envío terminado\nEnviados: ${sent}\nErrores: ${errors}`);
         }
 
         function logout() {
